--- a/.gitignore
+++ b/.gitignore
@@ -104,3 +104,4 @@ bag_of_words_meets_bags_of_popcorn/datasets/labeledTrainData.tsv
 bag_of_words_meets_bags_of_popcorn/datasets/sampleSubmission.csv
 bag_of_words_meets_bags_of_popcorn/datasets/unlabeledTrainData.tsv
 bag_of_words_meets_bags_of_popcorn/datasets/testData.tsv
+bag_of_words_meets_bags_of_popcorn/300features_40minwords_10context
