--- a/.gitignore
+++ b/.gitignore
@@ -121,3 +121,6 @@ competitive-data-science-predict-future-sales/datasets/sales_train.csv
 competitive-data-science-predict-future-sales/datasets/sample_submission.csv
 competitive-data-science-predict-future-sales/datasets/shops.csv
 competitive-data-science-predict-future-sales/datasets/test.csv
+quora-question-pairs/datasets/test.csv
+quora-question-pairs/datasets/train.csv
+quora-question-pairs/datasets/sample_submission.csv
