--- a/.gitignore
+++ b/.gitignore
@@ -124,3 +124,4 @@ competitive-data-science-predict-future-sales/datasets/test.csv
 quora-question-pairs/datasets/test.csv
 quora-question-pairs/datasets/train.csv
 quora-question-pairs/datasets/sample_submission.csv
+quora-question-pairs/result.csv
