--- a/.gitignore
+++ b/.gitignore
@@ -128,3 +128,4 @@ quora-question-pairs/result.csv
 competitive-data-science-predict-future-sales/xgb_submission.csv
 competitive-data-science-predict-future-sales/lgb_submission.csv
 competitive-data-science-predict-future-sales/submission.csv
+quora-question-pairs/lgb_result.csv
