--- a/.gitignore
+++ b/.gitignore
@@ -129,3 +129,5 @@ competitive-data-science-predict-future-sales/xgb_submission.csv
 competitive-data-science-predict-future-sales/lgb_submission.csv
 competitive-data-science-predict-future-sales/submission.csv
 quora-question-pairs/lgb_result.csv
+quora-question-pairs/lgb_result2.csv
+quora-question-pairs/lgb_result3.csv
